2009-03-16  Sven Panne  <sven.panne@aedion.de>

	* src/freeglut_state.c: Added GLUT_AUX and GLUT_MULTISAMPLE as possible
	  parameters for glutGet, making things more symmetric with
	  glutSetOption.
	* src/freeglutdll.def: Added missing API entries.

2009-03-10  John F. Fay <john.fay.ctr@eglin.af.mil>

	* progs/demos/demos.dsw: Adding the "smooth_opengl3" demo

2009-03-09  John F. Fay <john.fay.ctr@eglin.af.mil>

	* include/GL/freeglut_std.h: Making the definition of
	  "WIN32_LEAN_AND_MEAN" conditional to enhance compatibility with GLEW
	  per suggestion by Diederick C. Niehorster in e-mail dated Mon 3/9/2009
	  8:06 AM
	* progs/demos/Fractals/fractals.c: Setting the "fractals" demo initial
	  number of levels to 4 per suggestion from Diederick C. Niehorster
	  [diederick@niehorster.eu] in e-mail dated Mon 3/9/2009 5:29 AM

2009-03-01  John F. Fay <john.fay.ctr@eglin.af.mil>

	* progs/demos/CallbackMaker/CallbackMaker.c,
	  progs/demos/Lorenz/lorenz.c, progs/demos/shapes/shapes.c: Fixing
	  Microsoft compatibility with the new "vsnprintf" by putting an
	  underscore in front of it if WIN32 is defined but __CYGWIN__ is not

2009-03-01  Sven Panne <sven.panne@aedion.de>

	* configure.ac: We do not depend on GLU anymore
	* README.win32: Added notes for building under Cygwin
	* src/Makefile.am: To build shared libraries on Windows, one has to
	  declare explicitly that there are no undefined symbols during linking.
	  No idea why, but this seems to be the only way to enable this on
	  Cygwin via -mno-cygwin. Hopefully this won't cause problems on other
	  platforms (which has to be tested).
	* progs/demos/smooth_opengl3/smooth_opengl3.c: Windows fun again: Use
	  the correct calling convention for OpenGL extension entries.

2009-02-28  Sven Panne <sven.panne@aedion.de>

	* progs/demos/smooth_opengl3/smooth_opengl3.c: When -mno-cygwin is used,
	  we get ancient GL headers, so be a bit more conservative.
	* progs/demos/Fractals_random/fractals_random.c,